обновление апи и документации
